# PICO-football-display

./: CMakeLists.txt  README.md  commands.sh  football.cpp  football.py
Pico_ST7789/: CMakeLists.txt  Pico_ST7789.cpp  Pico_ST7789.h
artwork/: Readme.txt
artwork/Pics/: processPics.sh  rgb24_16.py
artwork/flags/: makePicodata.py
